tests/invalid/generated_binop_div_bytearray_bytearray/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: bytearray = bytearray(b"hello")
    y: bytearray = bytearray(b"hello")
    z = x / y
